--- a/Titanic_Dataset_Project.ipynb
+++ b/Titanic_Dataset_Project.ipynb
@@ -20,7 +20,7 @@
       "cell_type": "markdown",
       "source": [
         "# Titanic Dataset Project\n",
-        "Tom Ritman-Meer using Google Colaboratory notebook\n",
+        "## Tom Ritman-Meer using Google Colaboratory notebook\n",
         "\n",
         "In this notebook I will deploy machine learning models to predict the probability of a passenger surviving the 1912 Titanic disaster based on a number of classifying parameters. \n",
         "\n",
